use netlify-cms published libs
esm builds went into production at these versions.

--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
   "dependencies": {
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
-    "@talves/netlify-cms-backend-bitbucket": "2.6.2-beta.7",
-    "@talves/netlify-cms-backend-git-gateway": "2.6.2-beta.7",
-    "@talves/netlify-cms-backend-github": "2.6.2-beta.7",
-    "@talves/netlify-cms-backend-gitlab": "2.6.2-beta.7",
-    "@talves/netlify-cms-backend-test": "2.6.2-beta.7",
-    "@talves/netlify-cms-core": "2.6.2-beta.7",
-    "@talves/netlify-cms-editor-component-image": "2.6.2-beta.7",
-    "@talves/netlify-cms-lib-auth": "2.6.2-beta.7",
-    "@talves/netlify-cms-lib-util": "2.6.2-beta.7",
-    "@talves/netlify-cms-media-library-cloudinary": "2.6.2-beta.7",
-    "@talves/netlify-cms-media-library-uploadcare": "2.6.2-beta.7",
-    "@talves/netlify-cms-ui-default": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-boolean": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-date": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-datetime": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-file": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-image": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-list": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-map": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-markdown": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-number": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-object": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-relation": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-select": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-string": "2.6.2-beta.7",
-    "@talves/netlify-cms-widget-text": "2.6.2-beta.7",
+    "netlify-cms-backend-bitbucket": "^2.0.0",
+    "netlify-cms-backend-git-gateway": "^2.0.0",
+    "netlify-cms-backend-github": "^2.0.0",
+    "netlify-cms-backend-gitlab": "^2.0.0",
+    "netlify-cms-backend-test": "^2.0.0",
+    "netlify-cms-core": "^2.0.0",
+    "netlify-cms-editor-component-image": "^2.0.0",
+    "netlify-cms-lib-auth": "^2.0.0",
+    "netlify-cms-lib-util": "^2.0.0",
+    "netlify-cms-media-library-cloudinary": "^1.0.0",
+    "netlify-cms-media-library-uploadcare": "^0.5.0",
+    "netlify-cms-ui-default": "^2.0.0",
+    "netlify-cms-widget-boolean": "^2.0.0",
+    "netlify-cms-widget-date": "^2.0.0",
+    "netlify-cms-widget-datetime": "^2.0.0",
+    "netlify-cms-widget-file": "^2.0.0",
+    "netlify-cms-widget-image": "^2.0.0",
+    "netlify-cms-widget-list": "^2.0.0",
+    "netlify-cms-widget-map": "^1.0.0",
+    "netlify-cms-widget-markdown": "^2.0.0",
+    "netlify-cms-widget-number": "^2.0.0",
+    "netlify-cms-widget-object": "^2.0.0",
+    "netlify-cms-widget-relation": "^2.0.0",
+    "netlify-cms-widget-select": "^2.0.0",
+    "netlify-cms-widget-string": "^2.0.0",
+    "netlify-cms-widget-text": "^2.0.0",
     "immutable": "^3.7.6",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
