--- a/package.json
+++ b/package.json
@@ -9,43 +9,10 @@
     "eject": "echo \"react-scripts eject\""
   },
   "dependencies": {
-    "@emotion/core": "^10.0.9",
-    "@emotion/styled": "^10.0.9",
-    "netlify-cms-backend-bitbucket": "^2.0.0",
-    "netlify-cms-backend-git-gateway": "^2.0.0",
-    "netlify-cms-backend-github": "^2.0.0",
-    "netlify-cms-backend-gitlab": "^2.0.0",
-    "netlify-cms-backend-test": "^2.0.0",
-    "netlify-cms-core": "^2.0.0",
-    "netlify-cms-editor-component-image": "^2.0.0",
-    "netlify-cms-lib-auth": "^2.0.0",
-    "netlify-cms-lib-util": "^2.0.0",
-    "netlify-cms-media-library-cloudinary": "^1.0.0",
-    "netlify-cms-media-library-uploadcare": "^0.5.0",
-    "netlify-cms-ui-default": "^2.0.0",
-    "netlify-cms-widget-boolean": "^2.0.0",
-    "netlify-cms-widget-date": "^2.0.0",
-    "netlify-cms-widget-datetime": "^2.0.0",
-    "netlify-cms-widget-file": "^2.0.0",
-    "netlify-cms-widget-image": "^2.0.0",
-    "netlify-cms-widget-list": "^2.0.0",
-    "netlify-cms-widget-map": "^1.0.0",
-    "netlify-cms-widget-markdown": "^2.0.0",
-    "netlify-cms-widget-number": "^2.0.0",
-    "netlify-cms-widget-object": "^2.0.0",
-    "netlify-cms-widget-relation": "^2.0.0",
-    "netlify-cms-widget-select": "^2.0.0",
-    "netlify-cms-widget-string": "^2.0.0",
-    "netlify-cms-widget-text": "^2.0.0",
-    "immutable": "^3.7.6",
-    "lodash": "^4.17.11",
-    "moment": "^2.24.0",
-    "prop-types": "^15.7.2",
+    "netlify-cms-app": "2.9.0-beta.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-immutable-proptypes": "^2.1.0",
-    "react-scripts": "^2.1.8",
-    "uuid": "3.3.2"
+    "react-scripts": "^2.1.8"
   },
   "devDependencies": {
     "netlify-cms-backend-fs": "^0.4.3"
