--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "eject": "echo \"react-scripts eject\""
   },
   "dependencies": {
-    "netlify-cms-app": "^2.9.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "^2.1.8"
+    "netlify-cms-app": "^2.12.25",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
-    "netlify-cms-backend-fs": "^0.4.3"
+    "netlify-cms-proxy-server": "^1.3.6"
   },
   "eslintConfig": {
     "extends": "react-app"
